--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -233,8 +233,15 @@ jobs:
           -DCMAKE_C_COMPILER=clang \
           -DCMAKE_CXX_COMPILER=clang++ \
           -DUSE_SPIEL=OFF \
-          -DUSE_GSTREAMER_WEBRTC=OFF \
+          -DUSE_LIBBACKTRACE=OFF \
+          -DENABLE_SPEECH_SYNTHESIS=OFF \
           -DENABLE_DOCUMENTATION=OFF \
+          -DENABLE_INTROSPECTION=OFF  \
+          -DENABLE_BUBBLEWRAP_SANDBOX=OFF \
+          -DENABLE_WEBDRIVER=OFF \
+          -DENABLE_GAMEPAD=OFF \
+          -DUSE_GSTREAMER_WEBRTC=OFF \
+          -DENABLE_MINIBROWSER=OFF \
           -DENABLE_WPE_PLATFORM=OFF \
           -DENABLE_WPE_PLATFORM_HEADLESS=OFF \
           -DENABLE_ENCRYPTED_MEDIA=OFF \
