--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -165,7 +165,7 @@ jobs:
           sudo apt-get install -y libglib2.0-dev
 
           # Features Enabled by Default
-          sudo apt-get install -y libxslt1-dev ibjxl-dev libavif-dev libwoff-dev liblcms2-dev libatk1.0-dev libatk-bridge2.0-dev libgbm-dev libdrm-dev flite1-dev gobject-introspection libgirepository1.0-dev
+          sudo apt-get install -y libxslt1-dev libjxl-dev libavif-dev libwoff-dev liblcms2-dev libatk1.0-dev libatk-bridge2.0-dev libgbm-dev libdrm-dev flite1-dev gobject-introspection libgirepository1.0-dev
 
           # Networking and security (required)
           sudo apt-get install -y \
