--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -234,6 +234,7 @@ jobs:
           -DENABLE_SPEECH_SYNTHESIS=OFF \
           -DENABLE_DOCUMENTATION=OFF \
           -DENABLE_INTROSPECTION=OFF  \
+          -DENABLE_JOURNALD_LOG=OFF \
           -DENABLE_BUBBLEWRAP_SANDBOX=OFF \
           -DENABLE_WEBDRIVER=OFF \
           -DENABLE_GAMEPAD=OFF \
