--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -237,7 +237,6 @@ jobs:
           -DCMAKE_CXX_COMPILER=clang++ \
           -DENABLE_WPE_PLATFORM=ON \
           -DENABLE_WPE_PLATFORM_HEADLESS=ON \
-          -DENABLE_WPE_1_1_API=ON \
           -DUSE_SPIEL=OFF \
           -DUSE_LIBBACKTRACE=OFF \
           -DENABLE_SPEECH_SYNTHESIS=OFF \
@@ -252,6 +251,7 @@ jobs:
           -DENABLE_ENCRYPTED_MEDIA=OFF \
           -DENABLE_WPE_PLATFORM_DRM=OFF \
           -DENABLE_WPE_PLATFORM_WAYLAND=OFF \
+          -DENABLE_WPE_1_1_API=OFF \
           -DENABLE_WPE_QT_API=OFF \
           -DUSE_QT6=OFF
           ninja -C build -j$(nproc)
